# turing

./: .gitattributes  .gitmodules  LICENSE  README.md
Samples/: palindrome_even.tom  substitute.tom
Scripts/: Build.ps1  Check.ps1  Substitute.ps1  Test.ps1
ada/: README.md  alire.toml  turing.gpr
ada/src/: README.md  TuringException.ads  TuringMachine.adb  TuringMachine.ads  TuringMachineIO.adb  TuringMachineIO.ads  TuringTape.adb  TuringTape.ads  TuringTransitionFunction.adb  TuringTransitionFunction.ads  TuringTyping.adb  TuringTyping.ads  turing.adb
ada/test/: alire.toml  turingtests.gpr
ada/test/src/: TuringTest.adb  TuringTest.ads  TuringTestSuite.adb  TuringTestSuite.ads  turingtests.adb
c/: .gitignore  CMakeLists.txt  README.md  turing-io.c  turing-io.h  turing-machine.c  turing-machine.h  turing-tape.c  turing-tape.h  turing-tests.c  turing-transition-function.c  turing-transition-function.h  turing-typing.c  turing-typing.h  turing.c
cpp/: .gitignore  CMakeLists.txt  turing-io.cpp  turing-io.hpp  turing-machine.cpp  turing-machine.hpp  turing-tape.cpp  turing-tape.hpp  turing-tests.cpp  turing-tranisition-function.cpp  turing-tranisition-function.hpp  turing-transition-function.cpp  turing-transition-function.hpp  turing-typing.cpp  turing-typing.hpp  turing.cpp
cpp/libs/: CMakeLists.txt
csharp/: .editorconfig  .gitignore  Turing.sln  Turing.sln.DotSettings  stylecop.json
csharp/Turing/: Program.cs  Turing.csproj
csharp/Turing.Tests/: GlobalUsings.cs  Turing.Tests.csproj  TuringMachineTests.cs
csharp/Turing/Extensions/: StringExtensions.cs
csharp/Turing/Machine/: TuringCursorMovement.cs  TuringMachine.cs  TuringTape.cs  TuringTransitionFunction.cs
csharp/Turing/Machine/IO/: TuringMachineIO.cs  TuringMachineToml.cs  TuringMachineTransitionToml.cs
d/: .gitignore  dub.json  dub.selections.json
d/source/: app.d  turing_machine.d  turing_machine_io.d  turing_tape.d  turing_transitions.d  turing_typing.d
go/: README.md  go.mod  turing.go
go/interpreter/: io.go  machine.go  machine_test.go  tape.go  transitions.go  typing.go
pascal/: .gitignore  README.md  SimpleToml.pas  Turing.pas  TuringMachine.pas  TuringMachineIO.pas  TuringTape.pas  TuringTest.pas  TuringTransitionFunction.pas  TuringTyping.pas  TuringUtility.pas
python/: README.md  test.py  turing.py  turingMachine.py  turingMachineIO.py  turingTape.py  turingTransitionFunction.py  turingTyping.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/machine/: io.rs  mod.rs  tape.rs  transition.rs  typing.rs
